--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,8 +38,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx",
-    "**/*.mdx"
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
