--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"Utility": "./src/Utility"
 	},
 	"dependencies": {
-		"@andrew-r-king/react-kitchen": "^0.1.37",
+		"@rewrking/react-kitchen": "^0.1.42",
 		"@badrap/bar-of-progress": "^0.1.2",
 		"next": "12.0.8",
 		"react": "17.0.2",
