--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "17.0.2",
 		"react-icons": "^4.2.0",
 		"react-is": "17.0.2",
+		"react-oocontext": "^1.0.1",
 		"reflect-metadata": "^0.1.13",
 		"styled-components": "^5.3.0"
 	},
